--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,29 +713,31 @@
     "    similarities_= to_dense(similarities)\n",
     "    user_ = indexes.categories.get_loc(user)\n",
     "    item_ = columns.categories.get_loc(item)\n",
-    "    reprod = np.extract(counts_[:,item_]>0, counts_)\n",
-    "    print(reprod)\n",
+    "    reprod = np.extract(counts_[:,item_]>0, counts_[:,item_])\n",
+    "    array = counts_[:,item_]\n",
     "    sims = similarities_[user_,:] #vector de similituds\n",
-    "    cond = np.where(counts_[:,item_]>0)[0]\n",
-    "    denominador = sims[cond].sum()\n",
-    "    numerador = (reprod * sims).sum()\n",
-    "    print(numerador/denominador)\n",
-    "    return 0\n",
+    "    cond = counts_>0\n",
+    "    denominador = sims[cond[:,item_]]\n",
+    "    numerador = np.dot(cond[:,item_],sims)\n",
+    "    return (np.any(numerador))/(denominador.sum())\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]\n",
-      "0.0\n",
-      "0\n"
+     "ename": "ValueError",
+     "evalue": "shapes (707,6544) and (707,) not aligned: 6544 (dim 1) != 707 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-432-318a0cdcf63f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'__main__'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcounts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msimilarities\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m111\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m123\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-431-07a3454867d8>\u001b[0m in \u001b[0;36mscore\u001b[0;34m(counts, indexes, columns, similarities, user, item)\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0mcond\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcounts_\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0mdenominador\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msims\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcond\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mitem_\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m     \u001b[0mnumerador\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcond\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msims\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumerador\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdenominador\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: shapes (707,6544) and (707,) not aligned: 6544 (dim 1) != 707 (dim 0)"
      ]
     }
    ],
@@ -753,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [],
    "source": [
