--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 469,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,14 +736,15 @@
     "    cond = counts_>0\n",
     "    denominador = sims[cond[:,item_]].sum()\n",
     "    numerador = np.dot(array,sims)\n",
-    "    \n",
+    "    if not denominador:\n",
+    "        return 0\n",
     "    return numerador/denominador\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 470,
    "metadata": {},
    "outputs": [
     {
