--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,37 +731,34 @@
     "    user_ = indexes.categories.get_loc(user)\n",
     "    item_ = columns.categories.get_loc(item)\n",
     "    reprod = np.extract(counts_[:,item_]>0, counts_[:,item_])\n",
-    "    array = counts_[:,item_]\n",
-    "    sims = similarities_[user_,:] #vector de similituds\n",
+    "\n",
+    "    sims = similarities_[user_]  # Vector de similituds\n",
     "    cond = counts_>0\n",
     "    \n",
     "    denominador = sims[cond[:,item_]]\n",
-    "    \"\"\"\n",
-    "    numerador = np.dot(array,sims)\n",
-    "    if not denominador:\n",
-    "        return 0\n",
-    "    \"\"\"\n",
+    "    \n",
     "    numerador = np.dot(reprod, sims[cond[:,item_]])\n",
     "    \n",
-    "    return numerador.sum()/denominador.sum()"
+    "    return numerador.sum() / denominador.sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "277.0\n"
+      "564.9699381554409\n"
      ]
     }
    ],
    "source": [
     "if __name__ == '__main__':\n",
-    "    print(score(counts, indexes, columns, similarities, 111, 123))"
+    "    # print(score(counts, indexes, columns, similarities, 111, 123))\n",
+    "    print(score(counts, indexes, columns, similarities, 0, 1))"
    ]
   },
   {
@@ -773,10 +770,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from queue import PriorityQueue\n",
+    "\n",
     "def recommend_n_items(counts, indexes, columns, similarities, user, N):\n",
     "    \"\"\"\n",
     "    Donat un usuari calcula per cada ítem/artista que no ha escoltat la puntuació d'aquest. \n",
@@ -788,24 +787,65 @@
     "    :param N: Nombre d'ítems que volem que siguin recomanats.\n",
     "    :return : Llista amb els IDs dels ítems recomanats\n",
     "    \"\"\"\n",
-    "    return np.array([0,2,0,5,23,152])"
+    "    \n",
+    "    counts_ = to_dense(counts)\n",
+    "    similarities_ = to_dense(similarities)\n",
+    "    \n",
+    "    user_ = indexes.categories.get_loc(user)\n",
+    "    \"\"\"\n",
+    "    print(counts_)\n",
+    "    l = list()    \n",
+    "    for i in range (1,counts_.shape[1]+1):\n",
+    "        # print(i)\n",
+    "        item = columns.categories.get_loc(i)\n",
+    "        print(item)\n",
+    "        # print(score(counts, indexes, columns, similarities, user, item))\n",
+    "        #l.append(i)\n",
+    "    \"\"\"\n",
+    "    pq = PriorityQueue()\n",
+    "    noListened = counts_[user_] != 0\n",
+    "    print(noListened)\n",
+    "    print(counts_[user_])\n",
+    "    \n",
+    "    recommend = to_dense(np.where(counts_[user_][noListened] != 0))\n",
+    "    print(recommend)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    return pq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 345,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True  True  True ... False False False]\n",
+      "[1099  897  717 ...    0    0    0]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      " 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42]\n",
+      "<queue.PriorityQueue object at 0x124a3ca50>\n"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == '__main__':\n",
-    "    print(recommend_n_items(counts, indexes, columns, similarities, 111, 10))"
+    "    print(recommend_n_items(counts, indexes, columns, similarities, 0, 10))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Possibles millores \n",
+    "## Possibles millores \n",
     "\n",
     "Per implementar millores, dupliqueu el notebook i feu-ho en la còpia!\n",
     "\n",
