--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -757,8 +757,8 @@
    ],
    "source": [
     "if __name__ == '__main__':\n",
-    "    # print(score(counts, indexes, columns, similarities, 111, 123))\n",
-    "    print(score(counts, indexes, columns, similarities, 0, 1))"
+    "    print(score(counts, indexes, columns, similarities, 111, 123))\n",
+    "    # print(score(counts, indexes, columns, similarities, 0, 1))"
    ]
   },
   {
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,11 +803,11 @@
     "        #l.append(i)\n",
     "    \"\"\"\n",
     "    pq = PriorityQueue()\n",
-    "    noListened = counts_[user_] != 0\n",
+    "    noListened = counts_[user_] == 0\n",
     "    print(noListened)\n",
     "    print(counts_[user_])\n",
     "    \n",
-    "    recommend = to_dense(np.where(counts_[user_][noListened] != 0))\n",
+    "    recommend = to_dense(np.where(counts_[user_][noListened] == 0))\n",
     "    print(recommend)\n",
     "    \n",
     "    \n",
@@ -821,18 +821,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ True  True  True ... False False False]\n",
+      "[False False False ...  True  True  True]\n",
       "[1099  897  717 ...    0    0    0]\n",
-      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
-      " 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42]\n",
-      "<queue.PriorityQueue object at 0x124a3ca50>\n"
+      "[   0    1    2 ... 6498 6499 6500]\n",
+      "<queue.PriorityQueue object at 0x124a42290>\n"
      ]
     }
    ],
