--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/qijunjin/anaconda3/lib/python3.7/site-packages/numpy/lib/arraysetops.py:568: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "/Users/johnny/anaconda3/lib/python3.7/site-packages/numpy/lib/arraysetops.py:569: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
       "  mask |= (ar1 == a)\n"
      ]
     },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,14 +744,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "564.9699381554409\n"
+      "277.0\n"
      ]
     }
    ],
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,54 +787,37 @@
     "    :param N: Nombre d'ítems que volem que siguin recomanats.\n",
     "    :return : Llista amb els IDs dels ítems recomanats\n",
     "    \"\"\"\n",
-    "    \n",
+    "    user_ = indexes.categories.get_loc(user)\n",
     "    counts_ = to_dense(counts)\n",
     "    similarities_ = to_dense(similarities)\n",
-    "    \n",
-    "    user_ = indexes.categories.get_loc(user)\n",
-    "    \"\"\"\n",
-    "    print(counts_)\n",
-    "    l = list()    \n",
-    "    for i in range (1,counts_.shape[1]+1):\n",
-    "        # print(i)\n",
-    "        item = columns.categories.get_loc(i)\n",
-    "        print(item)\n",
-    "        # print(score(counts, indexes, columns, similarities, user, item))\n",
-    "        #l.append(i)\n",
-    "    \"\"\"\n",
+    "\n",
     "    pq = PriorityQueue()\n",
     "    noListened = counts_[user_] == 0\n",
     "    print(noListened)\n",
-    "    print(counts_[user_])\n",
     "    \n",
-    "    recommend = to_dense(np.where(counts_[user_][noListened] == 0))\n",
+    "    recommend = counts_[user_][noListened]\n",
     "    print(recommend)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    return pq"
+    "    for artist in columns.categories.tolist():\n",
+    "        print(artist)\n",
+    "        valor = score(counts,indexes,columns,similarities,user,artist)\n",
+    "        pq.put((valor, artist))\n",
+    "        \n",
+    "    recomanacio = []\n",
+    "    prod = []\n",
+    "    i = 0\n",
+    "    while not pq.empty() and i < N:\n",
+    "        next_item = pq.get()\n",
+    "        recomanacio.append((abs(next_item[0]), next_item[1]))\n",
+    "        prod.append(next_item[1])\n",
+    "        i += 1\n",
+    "    return prod"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[False False False ...  True  True  True]\n",
-      "[1099  897  717 ...    0    0    0]\n",
-      "[   0    1    2 ... 6498 6499 6500]\n",
-      "<queue.PriorityQueue object at 0x124a42290>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
     "    print(recommend_n_items(counts, indexes, columns, similarities, 0, 10))"
@@ -890,49 +873,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/qijunjin/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:9: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
-      "of pandas will change to not sort by default.\n",
-      "\n",
-      "To accept the future behavior, pass 'sort=False'.\n",
-      "\n",
-      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
-      "\n",
-      "  if __name__ == '__main__':\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b47398040309477aa8d033ce1e1bb05e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=99), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'recommend_n_items' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-29-c7f9c2fd535e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muser\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtqdm_notebook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkaggle_df_user_artists\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muserID\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m         \u001b[0mmusic_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrecommend_n_items\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmerged_counts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmerged_indexes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmerged_columns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmerged_similarities\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muser\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m         \u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0muser\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmusic_ids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'recommend_n_items' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
     "    try:\n",
@@ -968,13 +911,6 @@
     "        \n",
     "    results.to_csv('submission.csv', index=None)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -993,7 +929,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
