practica pre-release

--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -217,6 +217,21 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count_users: 251543\n",
+      "                         artistName\n",
+      "musicbrainzID                      \n",
+      "0                   betty blowtorch\n",
+      "1                         die Ärzte\n",
+      "2                 melissa etheridge\n",
+      "3                         elvenking\n",
+      "4              juliette & the licks\n",
+      "count_artits: 160112\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -230,13 +245,6 @@
       "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
       "NotebookApp.rate_limit_window=3.0 (secs)\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total_reproductions: 2356118519\n"
      ]
     }
    ],
@@ -674,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,14 +713,9 @@
     "    similarities_= to_dense(similarities)\n",
     "    user_ = indexes.categories.get_loc(user)\n",
     "    item_ = columns.categories.get_loc(item)\n",
-    "    reprod = np.extract(counts_[:,item_]>0, counts_[:,item_])\n",
-    "    array = counts_[:,item_]\n",
-    "    sims = similarities_[user_,:] #vector de similituds\n",
+    "    numerador = np.dot(counts_[:,item_],similarities[user_,:])\n",
     "    cond = counts_>0\n",
-    "    denominador = sims[cond[:,item_]].sum()\n",
-    "    numerador = np.dot(array,sims)\n",
-    "    if not denominador:\n",
-    "        return 0\n",
+    "    denominador = similarities[cond[:,item_]].sum()\n",
     "    return numerador/denominador\n",
     "\n",
     "    \n",
@@ -736,14 +739,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "277.0\n"
+      "0.597585209493449\n"
      ]
     }
    ],
@@ -762,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,16 +796,14 @@
     "    #return prod\n",
     "    \"\"\"\n",
     "    user_ = indexes.categories.get_loc(user)\n",
-    "    counts_ = to_dense(counts)\n",
-    "    similarities_ = to_dense(similarities)\n",
+    "    \n",
     "\n",
     "    pq = PriorityQueue()\n",
-    "    noListened = counts_[user_] == 0\n",
-    "    \n",
-    "    recommend = counts_[user_][noListened]\n",
+    "    noListened = counts[user_] != 0\n",
+    "    recommend = counts[user_][noListened]\n",
     "    for artist in columns.categories.tolist():\n",
     "        valor = score(counts,indexes,columns,similarities,user,artist)\n",
-    "        pq.put((valor, artist))\n",
+    "        pq.put((-valor, artist))\n",
     "        \n",
     "    recomanacio = []\n",
     "    prod = []\n",
@@ -819,16 +820,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[False False False ...  True  True  True]\n",
-      "[0 0 0 ... 0 0 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
     "    print(recommend_n_items(counts, indexes, columns, similarities, 0, 10))"
