--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,9 +711,9 @@
     "    \n",
     "    cond = counts_>0\n",
     "\n",
-    "    denominador = (similarities[:, user_]*cond[:,100]).sum()\n",
+    "    denominador = (similarities[:, user_]*cond[:, item_]).sum()\n",
     "\n",
-    "    # denominador = (similarities*cond[:,item_]).sum()\n",
+    "    # denominador = (similarities[cond[:,item_]]).sum()\n",
     "    \n",
     "    return numerador/denominador\n",
     "\n",
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
