--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -711,9 +711,9 @@
     "    \n",
     "    cond = counts_>0\n",
     "\n",
-    "    denominador = (similarities[:, user_]*cond[:, item_]).sum()\n",
+    "    denominador = (similarities[:, user_][cond[:, item_]]).sum()\n",
     "\n",
-    "    # denominador = (similarities[cond[:,item_]]).sum()\n",
+    "    # denominador = (similarities[cond[:, item_]]).sum()\n",
     "    \n",
     "    return numerador/denominador\n",
     "\n",
