--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -88,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/johnny/anaconda3/lib/python3.7/site-packages/numpy/lib/arraysetops.py:568: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "/home/guillem/anaconda3/lib/python3.7/site-packages/numpy/lib/arraysetops.py:522: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
       "  mask |= (ar1 == a)\n"
      ]
     },
@@ -135,14 +135,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(28987, 3)\n",
-      "707 6544\n"
+      "(5899, 3)\n",
+      "145 2945\n"
      ]
     }
    ],
    "source": [
     "if __name__ == '__main__':\n",
-    "    df_user_artists = original_df_user_artists[original_df_user_artists.userID < 1000]\n",
+    "    df_user_artists = original_df_user_artists[original_df_user_artists.userID < 200]\n",
     "    print(df_user_artists.shape)\n",
     "    print(len(df_user_artists['userID'].unique()), len(df_user_artists['musicbrainzID'].unique()))"
    ]
@@ -210,18 +210,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style='background: #FCD02C; color: #333; padding: 20px; border-radius: 5px;'>\n",
+    "    <div style='float: right; font-weight: bold;'>1/1</div>\n",
+    "    Bé, tot i que no calia que convertíssiu a `list`.\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "count_users: 251543\n",
-      "count_artits: 160112\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -236,6 +238,13 @@
       "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
       "NotebookApp.rate_limit_window=3.0 (secs)\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total_reproductions: 2356118519\n"
      ]
     }
    ],
@@ -263,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,18 +381,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style='background: #FCD02C; color: #333; padding: 20px; border-radius: 5px;'>\n",
+    "    <div style='float: right; font-weight: bold;'>1/1</div>\n",
+    "    Tot bé\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(707, 6544)\n",
+      "(145, 2945)\n",
       "0\n",
-      "Int64Index([220, 603, 1, 877, 557], dtype='int64')\n",
-      "Int64Index([246, 217, 158, 1757, 578], dtype='int64')\n"
+      "Int64Index([74, 134, 157, 138, 1], dtype='int64')\n",
+      "Int64Index([62, 158, 49, 217, 767], dtype='int64')\n"
      ]
     }
    ],
@@ -450,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,8 +490,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style='background: #FCD02C; color: #333; padding: 20px; border-radius: 5px;'>\n",
+    "    <div style='float: right; font-weight: bold;'>3/3</div>\n",
+    "    Molt bé! Seria encara millor si en lloc de `sum` féssiu servir `np.sum`, tingueu-ho en compte\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,6 +598,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style='background: #FCD02C; color: #333; padding: 20px; border-radius: 5px;'>\n",
+    "    <div style='float: right; font-weight: bold;'>4/4</div>\n",
+    "    Molt bé la implementació matricial!\n",
+    "    Respecte la iterativa, molt bé també. Com a únic comentari, una matriu sparse té per defecte 0 allà on no hi ha res, per tant no és necessari que ompliu la posició [i, i].\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Per cridar aquesta funció, el primer paràmetre pot ser:\n",
     "\n",
     "* Si `similarity_function` no és `None`: `similarity_function` és una funció que rep dos np.array i calcula la similitud (tipus similarity(x, y)). Utilitzant ~5000 usuaris i amb una bona implementació triga ~45min.\n",
@@ -577,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -638,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,27 +718,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style='background: #FCD02C; color: #333; padding: 20px; border-radius: 5px;'>\n",
+    "    <div style='float: right; font-weight: bold;'>4/5</div>\n",
+    "    En general està bé, però no funcionarà correctament amb la matriu triangular. Esteu agafant tota una fila de la matriu similarities, però solament heu omplert (correctament) una triangular. Per tant, aquest vector serà en part 0s i no ho hauria de ser.\n",
+    "    <br />\n",
+    "    Heu de combinar part de la fila i la columna de l'usuari de forma que únicament toqueu la part triangular que sí heu omplert.\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "277.0\n"
+      "16.49003235555099\n"
      ]
     }
    ],
    "source": [
     "if __name__ == '__main__':\n",
-    "    print(score(counts, indexes, columns, similarities, 111,123 )) #111,123\n",
+    "    print(score(counts, indexes, columns, similarities, 111,1 )) #111,123\n",
     "    # print(score(counts, indexes, columns, similarities, 0, 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,6 +789,17 @@
     "        return ru + (numerador/denominador)\n",
     "    else:\n",
     "        return ru"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style='background: #FCD02C; color: #333; padding: 20px; border-radius: 5px;'>\n",
+    "    Compte perque no esteu implementant la formula correctament. La mitja `ri` que heu de restar és una mitja per usuari de totes les seves reproduccions, quelcom tipus `counts.mean(axis=1)`.\n",
+    "    <br />\n",
+    "    Aleshores, el numerador us quedaria `(counts[:, item] - counts.mean(axis=1))[a]`\n",
+    "</div>"
    ]
   },
   {
@@ -802,6 +865,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style='background: #FCD02C; color: #333; padding: 20px; border-radius: 5px;'>\n",
+    "    <div style='float: right; font-weight: bold;'>1/2</div>\n",
+    "    Únicament heu de recomenar aqulells items que l'usuari no hagi escoltat. Esteu agafant possibles items que ja ha escoltat, i recomanant-los si queden prou alts.\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -832,6 +905,16 @@
    "source": [
     "if __name__ == '__main__':\n",
     "    print(recommend_n_items(counts, indexes, columns, similarities, 111, 10)) #111,10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style='background: #FCD02C; color: #333; padding: 20px; border-radius: 5px;'>\n",
+    "    <div style='float: right; font-weight: bold;'>14/16</div>\n",
+    "    La pràctica està força bé i la idea la teniu molt clara, fixeu-vos bé però en els petits detalls que us comento\n",
+    "</div>"
    ]
   },
   {
@@ -983,7 +1066,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
