--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -81,14 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/qijunjin/anaconda3/lib/python3.7/site-packages/numpy/lib/arraysetops.py:568: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "/Users/johnny/anaconda3/lib/python3.7/site-packages/numpy/lib/arraysetops.py:568: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
       "  mask |= (ar1 == a)\n"
      ]
     },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,6 +488,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sim_pearson(x,y):\n",
+    "    mean_x = np.mean(x)\n",
+    "    mean_y = np.mean(y)\n",
+    "    num = np.sum(np.dot(x-mean_x, y-mean_y))\n",
+    "    x_ = np.sqrt(np.sum(np.power((x-mean_x),2)))\n",
+    "    y_ = np.sqrt(np.sum(np.power((y-mean_y),2)))\n",
+    "\n",
+    "    if x_ == 0.0 or y_ == 0.0:\n",
+    "        return 0.\n",
+    "    \n",
+    "    return num/(x_*y_)\n",
+    "\n",
+    "def sim_euclidean(x,y):\n",
+    "    return 1/(1 + np.linalg.norm(x-y))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -499,14 +521,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.75\n"
+      "0.75\n",
+      "0.0\n",
+      "0.25\n"
      ]
     }
    ],
@@ -514,7 +538,9 @@
     "if __name__ == '__main__':\n",
     "    x = np.array([1, 1, 1, 0., 2])\n",
     "    y = np.array([1, 2, 3, 0., 0.])\n",
-    "    print(similarity(x, y))"
+    "    print(similarity(x, y))\n",
+    "    print(sim_pearson(x, y))\n",
+    "    print(sim_euclidean(x, y))"
    ]
   },
   {
@@ -588,7 +614,8 @@
     "        for i in range(n):\n",
     "            #matrix [i,i] = 0.\n",
     "            for j in range(i+1, n):\n",
-    "                matrix[i,j] = similarity(to_dense(counts[i]), to_dense(counts[j]))                    \n",
+    "                #matrix[i,j] = similarity(to_dense(counts[i]), to_dense(counts[j]))\n",
+    "                matrix[i,j] = sim_pearson(to_dense(counts[i]), to_dense(counts[j]))     \n",
     "        return matrix"
    ]
   },
@@ -3150,7 +3177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
