--- a/AssignmentCode.ipynb
+++ b/AssignmentCode.ipynb
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,11 +733,13 @@
     "    user_ = indexes.categories.get_loc(user)\n",
     "    item_ = columns.categories.get_loc(item)\n",
     "    a = to_dense(counts[:,item_])\n",
-    "    sim = np.concatenate((to_dense(similarities[:user_,user_]),to_dense( similarities[user_,user_:])))\n",
+    "    #sim = np.concatenate((to_dense(similarities[:user_,user_]),to_dense( similarities[user_,user_:])))\n",
     "    #sim = np.array(similarities[:user_,user_],similarities[user_,user_:])\n",
     "    #numerador = np.sum(counts_[:, item_][a]* similarities[:,user_][a])\n",
     "    #denominador = similarities[user_,a].sum()\n",
-    "    numerador = np.sum()* sim)\n",
+    "    sim = np.triu(to_dense(similarities[user_]), k=1)\n",
+    "    sim = sim[user_]\n",
+    "    numerador = np.sum(to_dense(counts[:, item_])* sim)\n",
     "    denominador = np.sum(sim[a > 0])\n",
     "    if denominador != 0 and numerador != 0:\n",
     "        return numerador/denominador\n",
@@ -759,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 143,
    "metadata": {
     "scrolled": true
    },
@@ -780,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +813,8 @@
     "    ru = np.mean(counts[user_,:])\n",
     "    ri = counts.mean(axis=1)\n",
     "    rpi = to_dense(counts[:,item_])\n",
-    "    sim = np.concatenate((to_dense(similarities[:user_,user_]),to_dense( similarities[user_,user_:])))\n",
+    "    sim = np.triu(to_dense(similarities[user_]), k=1)\n",
+    "    sim = sim[user_]\n",
     "    diferencia = counts[:, item_] - counts.mean(axis=1)\n",
     "    numerador = np.sum(to_dense(diferencia) *sim)\n",
     "    denominador = np.sum(sim[rpi > 0])\n",
@@ -834,14 +837,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-382.5020913077996\n"
+      "-363.9197885261573\n"
      ]
     }
    ],
@@ -859,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,13 +911,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6cc5af3cb8e140ea9619bd3eb335bfae",
+       "model_id": "81b94daca0f84b13aaa39c8bda50d264",
        "version_major": 2,
        "version_minor": 0
       },
@@ -930,7 +933,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[9137, 3108, 4364, 8042, 1778, 2080, 935, 802, 10941, 9130]\n"
+      "[9137, 1580, 4364, 1778, 8042, 935, 10941, 9130, 892, 10425]\n"
      ]
     }
    ],
@@ -941,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,13 +983,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d6c252c4e89404caa0dbabaca84046a",
+       "model_id": "37e8734bb622444fa935bad0308ae085",
        "version_major": 2,
        "version_minor": 0
       },
@@ -996,14 +999,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[1657, 2670, 2683, 2676, 2680, 2668, 2672, 13496, 13497, 664]\n"
-     ]
     }
    ],
    "source": [
